# discordMusicBot

./: .gitignore  Cargo.toml
src/: MusicBot.rs  botFunctions.rs  commandFunctions.rs  commands.rs  geniusLyrics.rs  lib.rs  main.rs  mod.rs  musicBot.rs  queue.rs  searcher.rs  spotify.rs  stringToVec.rs  stringToVector.rs  utils.rs  youtube.rs
src/bot/: botFunctions.rs  mod.rs  musicBot.rs  music_bot.rs  queue.rs
src/commands/: general.rs
src/geniusLyrics/: geniusLyrics.rs  mod.rs
src/lyrics/: genius_lyrics.rs  mod.rs
src/sources/: spotify.rs  youtube.rs
