[package]
name = "discord-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.9", default-features = false, features = ["cache","framework","standard_framework","client","gateway","rustls_backend","model"] }
songbird = { version = "0.2.0", features = ["builtin-queue"]}
tokio = { version = "1.0", features = ["macros","rt-multi-thread"] }
dotenv = { version = "0.15.0"}

